fix: adds plot compatible

--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -16,6 +16,8 @@
     backend=biber
 ]{biblatex}
 \usepackage{pgfplots}
+
+\pgfplotsset{compat=1.18}
 \addbibresource{references.bib}
 
 \DeclareFieldFormat{labelyear}{#1}
