--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -183,7 +183,7 @@ Finalmente, nossas conclusões sobre o trabalho serão expostos na seção 6.
 A metodologia adotada e os passos seguidos
 foram inspirados no artigo de \cite{Aissou2021}, 
 que implementou os algoritmos baseados em árvore: 
-\textit{Random Forest}, \textit{Gradient Boost}, \textit{XGBoost}, e 
+\textit{Random Forest}, \textit{Gradient Boost}, \textit{XGBoost} e 
 \textit{LightGBM} com o objetivo de explorar os dados obtidos.
 
 Será realizada a reimplementação dos algoritmos
