mudança no texto (#42)

--- a/article/artigo.tex
+++ b/article/artigo.tex
@@ -470,7 +470,11 @@ são similares ao \textit{Random Forest}.
 
 \section{Trabalhos Futuros}
 
-Em trabalhos futuros seria interessante
+A dificuldade encontrada durante o desenvolvimento desse artigo foi escolher um
+método de pré-processamento eficaz para otimizar o \textit{Random Forest},
+porque estava desbalanceado o conjunto de dados utilizados. 
+
+Com base nessa dificuldade em trabalhos futuros seria interessante
 investigar o uso de outros algoritmos de aprendizado de máquina
 para detecção de ataques de \textit{spoofing} de GPS,
 como por exemplo, redes neurais convolucionais (CNN) e inteligência artificial generativa,
@@ -486,6 +490,7 @@ Por fim, buscar a melhora do
 \textit{Extremely Randomized Trees} pode ser um caminho viável
 e econômico em custos operacionais do que o \textit{XGBoost}
 e o \textit{Random Forest}.
+
 
 \FloatBarrier
 \printbibliography
